--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,16 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
@@ -43,9 +50,14 @@
       <header>
         <nav>
           <div class="call">
-            <a class="button-wpp" href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta" onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"><i class="fa fa-whatsapp"></i> Agendar Consulta</a>
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
           </div>
-          
+
           <div class="main-menu">
             <ul class="menu">
               <li><a href="#" class="link-active">Início</a></li>
@@ -88,7 +100,7 @@
           </div>
         </nav>
       </header>
-      
+
       <section class="s-banner">
         <div class="imgBanner">
           <div class="background-overlay"></div>
@@ -128,25 +140,45 @@
           <h2>Principais Tratamentos</h2>
           <div class="itens-tratamento">
             <div class="item-tratamento">
-              <div class="plus"><img src="resources/icons/plus-icon.svg" alt="Mais tratamentos"></div>
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
               <div class="text-tratamento">
                 <span>Ortodontia</span>
               </div>
             </div>
             <div class="item-tratamento">
-              <div class="plus"><img src="resources/icons/plus-icon.svg" alt="Mais tratamentos"></div>
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
               <div class="text-tratamento">
                 <span>Clareamento Dental</span>
               </div>
             </div>
             <div class="item-tratamento">
-              <div class="plus"><img src="resources/icons/plus-icon.svg" alt="Mais tratamentos"></div>
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
               <div class="text-tratamento">
                 <span>Dentes do Siso</span>
               </div>
             </div>
             <div class="item-tratamento">
-              <div class="plus"><img src="resources/icons/plus-icon.svg" alt="Mais tratamentos"></div>
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
               <div class="text-tratamento">
                 <span>Lente de Contato Dental</span>
               </div>
@@ -160,94 +192,94 @@
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
-                <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
-                </p>
-                <a href="" class="agendarIndex" style="color: #fff"
-                  >Agendar consulta</a
-                >
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>A Clínica Oral</h2>
+              <p>
+                Somos uma Clínica Odontológica com o objetivo de no mesmo espaço
+                integrar todas as especialidades, proporcionando um plano de
+                tratamento mais completo e personalizado. Contando com uma
+                equipe de profissionais graduados e pós-graduados pela USP e
+                outros Centros de Excelência buscamos constantemente trazer para
+                nossos pacientes o que a de melhor e mais moderno na
+                odontologia.
+              </p>
+              <a href="" class="agendarIndex" style="color: #fff"
+                >Agendar consulta</a
+              >
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
-                <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                  class="ml-2"
-                />
-              </div>
+        <div class="info-tratamento-base invisalign-left">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Equipamentos de Última Geração</h2>
+              <p>
+                Investimos constantemente em tecnologia e aparelhos de última
+                geração, como sensores digitais de raio-X, câmeras intra-orais
+                para fotografias digitais, laser, softwares de imagens para
+                sempre oferecer o melhor serviço para nossos pacientes.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+                class="ml-2"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
-                <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Espaço Aconchegante</h2>
+              <p>
+                Criamos um espaço aconchegante para seu conforto, climatizado e
+                com rede wireless. Contando ainda com iPads disponíveis para
+                você agilizar seus compromissos ou simplesmente navegar em seus
+                sites prediletos. Todas as salas são equipadas com TVs e fones
+                sem fio, travesseiros e cobertores para conforto do paciente
+                durante o atendimento.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
