--- a/src/contato.html
+++ b/src/contato.html
@@ -122,7 +122,7 @@
           <div class="call">
             <a
               class="button-wpp"
-              href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
               ><i class="fa fa-whatsapp"></i> Agendar consulta</a
             >
@@ -216,7 +216,7 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="#endereco">Endereço</a>
+                <a href="/#endereco">Endereço</a>
               </li>
 
               <li>
@@ -229,7 +229,7 @@
               <a
                 style="color: #fff"
                 class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 ><i class="fa fa-whatsapp"></i> Agendar consulta</a
               >
@@ -271,9 +271,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="#endereco">Endereço</a>
+            <a href="/#endereco">Endereço</a>
 
-            <a href="#contato">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -298,7 +298,7 @@
                   </div>
                   <div class="buttons-contato">
                     <a
-                      href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                      href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                       class="button-contato-zap"
                       ><i class="fa-brands fa-whatsapp"></i> Enviar Whatsapp</a
                     >
@@ -342,7 +342,7 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
-                href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
@@ -367,7 +367,7 @@
 
       <section class="s-whatsAppButton">
         <a
-          href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
           target="_blank"
           class="whatsapp-link"
         >
