--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -134,7 +134,7 @@
           <div class="call">
             <a
               class="button-wpp"
-              href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
               ><i class="fa fa-whatsapp"></i> Agendar consulta</a
             >
@@ -228,11 +228,11 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="#endereco">Endereço</a>
+                <a href="/#endereco">Endereço</a>
               </li>
 
               <li>
-                <a href="#contato">Contato</a>
+                <a href="contato.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -241,7 +241,7 @@
               <a
                 style="color: #fff"
                 class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 ><i class="fa fa-whatsapp"></i> Agendar consulta</a
               >
@@ -283,9 +283,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="#endereco">Endereço</a>
+            <a href="/#endereco">Endereço</a>
 
-            <a href="#contato">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -383,10 +383,10 @@
                 </div>
                 <div class="number-left-localizacao" style="padding: 5rem 0">
                   <a
-                    href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                     onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   >
-                    <i class="fa-brands fa-whatsapp"></i> Enviar Mensagem</a
+                    <i class="fa-brands fa-whatsapp"></i> Ver Número</a
                   >
                 </div>
               </div>
@@ -414,7 +414,7 @@
         <div class="infos-mobile-dayClinic">
           <div class="ligar-mobile-dayClinic">
             <a
-              href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
             >
               <i class="fa-solid fa-phone"></i> Ligar</a
             >
@@ -440,7 +440,7 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
-                href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
@@ -465,7 +465,7 @@
 
       <section class="s-whatsAppButton">
         <a
-          href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
           target="_blank"
           class="whatsapp-link"
         >
