--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
           <div class="call">
             <a
               class="button-wpp"
-              href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
               ><i class="fa fa-whatsapp"></i> Agendar consulta</a
             >
@@ -260,7 +260,7 @@
               <a
                 style="color: #fff"
                 class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 ><i class="fa fa-whatsapp"></i> Agendar consulta</a
               >
@@ -302,9 +302,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="#endereco">Endereço</a>
+            <a href="/#endereco">Endereço</a>
 
-            <a href="#contato">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -421,7 +421,7 @@
                 odontologia.
               </p>
               <a
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 class="agendarIndex"
                 style="color: #fff"
@@ -567,10 +567,10 @@
                 </div>
                 <div class="number-left-localizacao" style="padding: 5rem 0">
                   <a
-                    href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                     onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   >
-                    <i class="fa-brands fa-whatsapp"></i> Enviar Mensagem</a
+                    <i class="fa-brands fa-whatsapp"></i> Ver Número</a
                   >
                 </div>
               </div>
@@ -598,7 +598,7 @@
         <div class="infos-mobile-dayClinic">
           <div class="ligar-mobile-dayClinic">
             <a
-              href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
             >
               <i class="fa-solid fa-phone"></i> Ligar</a
             >
@@ -624,7 +624,7 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
-                href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
@@ -649,7 +649,7 @@
 
       <section class="s-whatsAppButton">
         <a
-          href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
           target="_blank"
           class="whatsapp-link"
         >
