--- a/src/page24.html
+++ b/src/page24.html
@@ -133,7 +133,7 @@
           <div class="call">
             <a
               class="button-wpp"
-              href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
               ><i class="fa fa-whatsapp"></i> Agendar consulta</a
             >
@@ -227,11 +227,11 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="#endereco">Endereço</a>
+                <a href="/#endereco">Endereço</a>
               </li>
 
               <li>
-                <a href="#contato">Contato</a>
+                <a href="contato.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -240,7 +240,7 @@
               <a
                 style="color: #fff"
                 class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 ><i class="fa fa-whatsapp"></i> Agendar consulta</a
               >
@@ -282,9 +282,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="#endereco">Endereço</a>
+            <a href="/#endereco">Endereço</a>
 
-            <a href="#contato">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -369,7 +369,7 @@
               <div class="call">
                 <a
                   class="button-wpp"
-                  href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                  href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                   onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   ><i class="fa fa-whatsapp"></i> Agendar consulta</a
                 >
@@ -439,7 +439,7 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
-                href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
@@ -464,7 +464,7 @@
 
       <section class="s-whatsAppButton">
         <a
-          href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
           target="_blank"
           class="whatsapp-link"
         >
