--- a/src/page43.html
+++ b/src/page43.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="call">
             <a
               class="button-wpp"
-              href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
               ><i class="fa fa-whatsapp"></i> Agendar consulta</a
             >
@@ -205,7 +205,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="equipe.html">Equipe</a>
               </li>
               <li><a href="/#depoimentos">Depoimentos</a></li>
-              <li><a href="#endereco">Endereço</a></li>
+              <li><a href="/#endereco">Endereço</a></li>
               
               <li>
                 <a href="contato.html"
@@ -219,7 +219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a
                 style="color: #fff"
                 class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 ><i class="fa fa-whatsapp"></i> Agendar consulta</a
               >
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               >Endereço</a
             >
             
-            <a href="#contato">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
               <a href="./blog.html"
@@ -450,7 +450,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <section class="s-whatsAppButton">
         <a
-          href="https://api.whatsapp.com/send?phone=5511913428770&text=Oi, gostaria de agendar uma consulta"
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
           target="_blank"
           class="whatsapp-link"
         >
